# SolAgent

./: .dockerignore  .gitignore  Anchor.toml  INSTALL_MCP.md  Project.md  README.md  STATUS.md  package.json  pnpm-lock.yaml  skills-lock.json
.omc/: project-memory.json
.omc/handoffs/: team-exec.md  team-plan.md
.omc/sessions/: 0f70743c-ad1f-441b-bc7c-4ece20d76a3c.json  1723cb4e-5e00-4bd8-b31d-a220207665e1.json  1cdd0b7f-91de-4d15-b7e7-bb20609a6b2a.json  26a33310-82a1-48a0-840d-b1ec71711390.json  4434b17c-4960-4c5c-ac2d-f26a53e36cee.json  5702901b-4634-4ada-8a1c-c202fcd131cc.json  871be1c5-bc06-4876-93fa-a1e3aed3d9a9.json  8fbc58da-3eb6-4fa5-9faf-f34db1519b58.json  8fbfaea8-b40c-4573-81dd-081c2935046d.json  8fcf60d5-5ae3-487e-b062-1267e48a6053.json  9df6d7c8-d092-4cb6-898d-aef40ded7e27.json  a41c61be-6c2a-4406-a6de-c7ad53ec51f3.json  be4d3459-5d6c-4b21-95c2-4e92eb7c5820.json  c975f76d-6328-43f7-bf54-399578450f82.json  cec0d91b-ef43-4a94-ac16-529ba159983b.json  d7a8e22a-c582-4958-947f-52a10d114d74.json  fb8ace0d-cf75-4a0b-abd4-ae0fcad9dd7a.json  ff0a81f6-4e89-451f-8603-d9991d79e0e4.json
.omc/state/: last-tool-error.json  mission-state.json
apps/mcp-server/: README.md  package.json
apps/oracle-service/: .env.example  Dockerfile  package.json
apps/swap-analyzer-service/: .env.example  Dockerfile  (+1 more)
deploy/: README.md  anchor-deploy.md  railway.md  release-mcp.sh
note/: chat1.md  chat2.md
programs/trading_vault/: Cargo.toml
programs/trading_vault/src/: lib.rs
railway/: oracle.json  swap-analyzer.json  web.json
tests/: trading_vault.spec.ts  tsconfig.json
(+76 files in other folders)
