[package]
name = "trading_vault"
version = "0.1.0"
description = "Solana AI Trading Agent vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "token_2022", "associated_token"] }
whirlpool = { version = "0.30.0", features = ["cpi"] }
pyth-solana-receiver-sdk = "0.4.0"
